--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <aside class="sidebar">
                 <div class="explorer-title">EXPLORER</div>
                 <ul class="file-list">
-                    <li class="active" data-file="about"><img src="../imgs/document.png" alt="document.png" class="icon"> about_me.js</li>
-                    <li data-file="skills"><img src="../imgs/document.png" alt="document.png" class="icon"> skills.js</li>
-                    <li data-file="projects"><img src="../imgs/document.png" alt="document.png" class="icon"> projects.js</li>
-                    <li data-file="experiences"><img src="../imgs/document.png" alt="document.png" class="icon"> experiences.js</li>
+                    <li class="active" data-file="about"><img src="imgs/document.png" alt="document.png" class="icon"> about_me.js</li>
+                    <li data-file="skills"><img src="imgs/document.png" alt="document.png" class="icon"> skills.js</li>
+                    <li data-file="projects"><img src="imgs/document.png" alt="document.png" class="icon"> projects.js</li>
+                    <li data-file="experiences"><img src="imgs/document.png" alt="document.png" class="icon"> experiences.js</li>
                 </ul>
             </aside>
 
